test/must_fail/api/must_fail_file_exists_int_args.ngjs
#!/usr/bin/env ngspicejs
// file_exists wants string
// linter: ngspicejs-lint
"use strict";

file_exists(1);

